Web: fix scrollbar on "select a ... to see its details" content
The "fix" is just setting the height to 50% instead of 100%, as the latter
will make it as big as the entire column; that causes the scrollbar to
show, as the column title isn't taken into account.

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -285,9 +285,8 @@ footer {
   color: var(--color-text-hint);
   display: flex;
   user-select: none;
-  height: 100%;
+  height: 50%;
   justify-content: center;
-  margin: auto;
 }
 
 .indicator {
